Srinivasa DS <srinivasa@in.ibm.com>,PR6429 Inerim fix to avoid compilation error of systemtap module